--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -173,7 +173,13 @@
   "rescan_chain": {
     "title": "Rescan chain",
     "subtitle": "Lorem ipsum",
-    "text_button_submit": "Rescan chain"
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "label_blockheight": "Blockheight",
+    "feedback_invalid_blockheight": "Please provide a valid blockheight value greater than or equal to {{ min }}.",
+    "label_gaplimit": "Gap limit",
+    "feedback_invalid_gaplimit": "Please provide a valid gaplimit value greater than or equal to {{ min }}.",
+    "text_button_submit": "Rescan chain",
+    "text_button_submitting": "Rescan chain"
   },
   "current_wallet": {
     "text_loading": "Loading",
