--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -7,6 +7,7 @@
     "back": "Back",
     "close": "Close",
     "abort": "Abort",
+    "cancel": "Cancel",
     "table": {
       "pagination": {
         "items_per_page": {
