wip(import): show rescanning indicator on main wallet view

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -150,7 +150,7 @@
   },
   "import_wallet": {
     "alert_other_wallet_unlocked": "Currently <1>{{ walletName }}</1> is active. You need to lock it first. <3>Go back</3>.",
-    "alert_rescanning_already_in_progress": "Rescanning the timechain is currently in progress. Please wait till it finishes and then try again. <1>Go back</1>.",
+    "alert_rescanning_already_in_progress": "Rescanning the timechain is currently in progress. Please wait until the process finishes and then try again. <1>Go back</1>.",
     "wallet_details": {
       "title": "Import Wallet",
       "text_button_submit": "Continue",
