--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -34,6 +34,7 @@
   },
   "navbar": {
     "title": "Jam",
+    "text_rescan_in_progress": "Rescanning...",
     "button_create_wallet": "Create Wallet",
     "tab_send": "Send",
     "tab_receive": "Receive",
@@ -193,6 +194,7 @@
   },
   "current_wallet": {
     "text_loading": "Loading",
+    "text_rescan_in_progress": "Rescanning in progress...",
     "button_deposit": "Receive",
     "button_withdraw": "Send",
     "error_loading_failed": "Loading wallet failed.",
