--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -161,14 +161,14 @@
     "import_details": {
       "title": "Please enter your mnemonic phrase!",
       "subtitle": "Please enter your mnemonic phrase one by one in the correct order and start the rescan process.",
+      "feedback_invalid_menmonic_phrase": "Please provide a valid mnemonic phrase",
       "import_options": "Import options",
       "label_blockheight": "Rescan height",
-      "description_blockheight": "The blockheight at which the rescan process starts to search for your funds. The earlier the wallet has been created, the lower this value should be. ",
+      "description_blockheight": "The blockheight at which the rescan process starts to search for your funds. The earlier the wallet has been created, the lower this value should be.",
       "feedback_invalid_blockheight": "Please provide a valid blockheight value greater than or equal to {{ min }}.",
-      "label_gaplimit": "Gaplimit",
-      "description_gaplimit": "Set to the highest address number used in any of the jars. Increase this number if your wallet is heavily used.",
+      "label_gaplimit": "Address import limit",
+      "description_gaplimit": "The amount of addresses that are imported per jar. Set to the highest address index used in any of the jars. Increase this number if your wallet is heavily used.",
       "feedback_invalid_gaplimit": "Please provide a valid gaplimit value greater than or equal to {{ min }}.",
-      "feedback_invalid_menmonic_phrase": "Please provide a valid mnemonic phrase",
       "text_button_submit": "Review",
       "text_button_submitting": "Review",
       "__dev_fill_with_dummy_mnemonic_phrase": "[dev] Fill with dummy mnemonic phrase"
@@ -182,7 +182,7 @@
   },
   "rescan_chain": {
     "title": "Rescan chain (Experimental)",
-    "subtitle": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "subtitle": "Rescan the local timechain for wallet related transactions.",
     "label_blockheight": "Blockheight",
     "description_blockheight": "The height of the chain at which the rescan process is started.",
     "feedback_invalid_blockheight": "Please provide a valid blockheight value greater than or equal to {{ min }}.",
@@ -264,7 +264,7 @@
       "text_button_cancel": "Cancel",
       "text_button_submit": "Save",
       "text_button_submitting": "Saving...",
-      "error_loading_fee_config_failed": "Error while loading fee config values. ",
+      "error_loading_fee_config_failed": "Error while loading fee config values.",
       "error_saving_fee_config_failed": "Error while saving fee config values. Reason: {{ reason }}"
     }
   },
